[FIX] toggle button and dark mode on register form

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,7 +66,6 @@ input:focus,
 select:focus,
 button:focus,
 textarea:focus {
-	background-color: initial;
 	outline: none; 
 }
 
@@ -1975,7 +1974,7 @@ ol {
 -------------------------*/
 
 .bmi-calculator-section {
-	background: #151515;
+	background: transparent;
 }
 
 .section-title.chart-title {
